--- a/chaliwebpage/templates/success.html
+++ b/chaliwebpage/templates/success.html
@@ -1,2 +1,11 @@
-<h1>Success!</h1>
-<p>Your input has been saved.</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Success</title>
+</head>
+<body>
+    <h1>Success!</h1>
+
+    <p>Your data has been saved successfully.</p>
+</body>
+</html>
