--- a/chaliwebpage/templates/user_profile.html
+++ b/chaliwebpage/templates/user_profile.html
@@ -1,9 +1,10 @@
 <!-- chaliwebpage/templates/user_profile.html -->
 <!DOCTYPE html>
 <html lang="en">
+<a href="{% url 'blog:article_detail' slug=post.slug %}">{{ post.title }}</a>
 <head>
     <meta charset="UTF-8">
-    <title>User Profile</title>
+    <title>ChaliWebPage User Profile</title>
 </head>
 <body>
     <h1>User Profile Form</h1>
