2nd initial commit

--- a/chaliwebpage/templates/user_profile.html
+++ b/chaliwebpage/templates/user_profile.html
@@ -1,6 +1,7 @@
 <!-- chaliwebpage/templates/user_profile.html -->
 <!DOCTYPE html>
 <html lang="en">
+    <a href="{% url 'home' %}">Home</a>
 
 <head>
     <meta charset="UTF-8">
