--- a/chaliwebpage/templates/user_profile.html
+++ b/chaliwebpage/templates/user_profile.html
@@ -19,7 +19,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>User Data Form</title>
+    <title>ChaliWebPage
+        User Data Form</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
