--- a/chaliwebpage/templates/user_profile.html
+++ b/chaliwebpage/templates/user_profile.html
@@ -15,12 +15,14 @@
 </body>
 </html>
 
+
+
 <!-- Define the HTML template for the web page -->
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ChaliWebPage
-        User Data Form</title>
+    <title>ChaliWebPage</title>>
+        <title>User Data Form</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
