--- a/chaliwebpage/templates/user_profile.html
+++ b/chaliwebpage/templates/user_profile.html
@@ -21,8 +21,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ChaliWebPage</title>>
-        <title>User Data Form</title>
+    <title>ChaliWebPage User Data Form</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
