--- a/chaliwebpage/templates/user_profile.html
+++ b/chaliwebpage/templates/user_profile.html
@@ -6,7 +6,7 @@
     <title>ChaliWebPage User Profile</title>
 </head>
 <body>
-    <h1>User Profile Form</h1>
+    <h1>Chali Web Page User Profile Form</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
@@ -25,9 +25,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>User Data Form</h1>
+    <h1>Chali Web Page User Data Form</h1>
     <form method="POST" action="">
         {% csrf_token %}
+        {{ form.as_p }}
         <label for="first_name">First Name:</label>
         <input type="text" id="first_name" name="first_name" value="{{ first_name }}">
         <label for="last_name">Last Name:</label>
