--- a/chaliwebpage/templates/success.html
+++ b/chaliwebpage/templates/success.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <a href="{% url 'user_profile' %}">Home</a>
+    <a href="{% url 'user_profile' %}"><h2>Home</h2></a>
 <head>
     <title>Success</title>
+    <hr/>
 </head>
-<body>
+<body style="background-color: yellowgreen;">
     <h1>Success!</h1>
-
+    <br>
+    <P>Thank you for your time.</P>
     <p>Your data has been saved successfully.</p>
+    <br>
+    <hr/><hr/>
 </body>
 </html>
