2nd final commit

--- a/chaliwebpage/templates/user_profile.html
+++ b/chaliwebpage/templates/user_profile.html
@@ -14,8 +14,9 @@
             <form method="post">
             {% csrf_token %}
             {{ form.as_p}}
-            <input type="submit" value="Submit"; style="background-color:whitesmoke">    
+            <input autocomplete="off" autofocus type="submit" value="Submit"; style="background-color:whitesmoke">    
             </form>
+            <br/>
                 <aside>(...A Django-Mysql WebPage that collects and validates user input...)  </aside>
         </section 1>
         <hr/>
