--- a/chaliwebpage/templates/pdf_template.html
+++ b/chaliwebpage/templates/pdf_template.html
@@ -34,19 +34,19 @@
         </tr>
         <tr>
             <td>First Name</td>
-            <td>{{ user_profile.first_name }}</td>
+            <td>{{ userprofile.first_name }}</td>
         </tr>
         <tr>
             <td>Last Name</td>
-            <td>{{ user_profile.last_name }}</td>
+            <td>{{ userprofile.last_name }}</td>
         </tr>
         <tr>
             <td>Phone Number</td>
-            <td>{{ user_profile.phone_number }}</td>
+            <td>{{ userprofile.phone_number }}</td>
         </tr>
         <tr>
             <td>Email</td>
-            <td>{{ user_profile.email }}</td>
+            <td>{{ userprofile.email }}</td>
         </tr>
     </table>
 </body>
