--- a/chaliwebpage/templates/success.html
+++ b/chaliwebpage/templates/success.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <a href="{% url 'user_profile' %}"><h2>Home</h2></a>
+    <a href="{% url 'userprofile' %}"><h2>Home</h2></a>
 <head>
     <title>Success</title>
     <hr/>
