--- a/chaliwebpage/templates/userprofile.html
+++ b/chaliwebpage/templates/userprofile.html
@@ -1,4 +1,4 @@
-<!-- chaliwebpage/templates/user_profile.html -->
+<!-- chaliwebpage/templates/userprofile.html -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -8,8 +8,9 @@
     </head>
     <body style="background-color: lightblue;">
         <h1 style="color: blue;">Chali WebPage </h1>
+        <p>
         <hr/>
-        <h2 style="color: red;background-color: blue;"> User Profile Form</h2>
+        <h2 style="color: red;background-color: blue;padding: 15px;border: 5px solid green;border-radius: 100%;margin: top 10px;"> User Profile Form</h2>
         <section 1>
             <form method="post">
             {% csrf_token %}
