--- a/chaliwebpage/templates/userprofile_list.html
+++ b/chaliwebpage/templates/userprofile_list.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>User List</title>
+    <title>User List    </title>
 </head>
 <body>
-    <h1>User List</h1>
+    <h1>User List    </h1>
     <ul>
-        {% for user_profile in users%}
-            <li>{{user_profile.first_name}} {{user_profile.last_name}} - {{user_profile.email}}</li>
+        {% for userprofile in userprofile%}
+            <li>{{userprofile.first_name}} {{userprofile.last_name}} - {{userprofile.email}}</li>
         {%endfor%}
     </ul>
 </body>
