--- a/chaliwebpage/templates/logout.html
+++ b/chaliwebpage/templates/logout.html
@@ -5,6 +5,9 @@
 </head>
 <body>
     <h1>Logout</h1>
+    <a href="{% url 'logout' %}">Logout</a>
+    {% url 'logout' %}
     <p>You have been logged out.</p>
+    <hr>
 </body>
 </html>
